wip: update active status
