# device/api.yaml
@@ -164,6 +164,29 @@ paths:
         "500":
           description: Server error
 
+  /device/{id}/configuration/{configurationId}/status:
+    post:
+      summary: Toggle device configuration status
+      operationId: ToggleConfigurationStatus
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: configurationId
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: Configuration status toggled
+        "404":
+          description: Configuration or device not found
+        "500":
+          description: Server error
+
 components:
   schemas:
     Device:
