# device/handler_gen.go
@@ -70,6 +70,9 @@ type ServerInterface interface {
 	// Update device configuration
 	// (PUT /device/{id}/configuration/{configurationId})
 	UpdateConfiguration(ctx echo.Context, id string, configurationId string) error
+	// Toggle device configuration status
+	// (POST /device/{id}/configuration/{configurationId}/status)
+	ToggleConfigurationStatus(ctx echo.Context, id string, configurationId string) error
 	// Get device configurations
 	// (GET /device/{id}/configurations)
 	GetDeviceConfigurations(ctx echo.Context, id string) error
@@ -150,6 +153,30 @@ func (w *ServerInterfaceWrapper) UpdateConfiguration(ctx echo.Context) error {
 	return err
 }
 
+// ToggleConfigurationStatus converts echo context to params.
+func (w *ServerInterfaceWrapper) ToggleConfigurationStatus(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// ------------- Path parameter "configurationId" -------------
+	var configurationId string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "configurationId", ctx.Param("configurationId"), &configurationId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter configurationId: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.ToggleConfigurationStatus(ctx, id, configurationId)
+	return err
+}
+
 // GetDeviceConfigurations converts echo context to params.
 func (w *ServerInterfaceWrapper) GetDeviceConfigurations(ctx echo.Context) error {
 	var err error
@@ -222,6 +249,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/device/:id", wrapper.GetDevice)
 	router.GET(baseURL+"/device/:id/configuration/:configurationId", wrapper.GetConfiguration)
 	router.PUT(baseURL+"/device/:id/configuration/:configurationId", wrapper.UpdateConfiguration)
+	router.POST(baseURL+"/device/:id/configuration/:configurationId/status", wrapper.ToggleConfigurationStatus)
 	router.GET(baseURL+"/device/:id/configurations", wrapper.GetDeviceConfigurations)
 	router.POST(baseURL+"/device/:id/configurations", wrapper.CreateConfiguration)
 	router.GET(baseURL+"/devices", wrapper.GetDevices)
